src/styles/charsheetSections/_talents.scss
@use '../base';

span.talent-name {
  font-weight: bold;
  font-variant: small-caps;
}

.sheet-talent {
  margin-bottom: 20px;
}

.talent-with-widgets {
  display: flex;
}

.widgets-sidebar {
  min-width: 20%;
  border-left: 1px solid base.$offBlack;
  margin-left: 10px;
  padding-left: 10px;
}

.widget-title {
  font-weight: bold;
  font-variant: small-caps;
}

p.widget-title {
  margin: 0;
}

$widgetBoxHeight: 20px;

.widget-multicheckbox-checkbox {
  width: $widgetBoxHeight;
  height: $widgetBoxHeight;
  appearance: none;
  background-color: base.$mainBgColor;
  border: 1px black solid;
  padding: 0;
  margin: 0;
  flex-shrink: 1;
}

.widget-multicheckbox-checkbox:checked {
  background-color: base.$offBlack;
}

div.widget-multicheckbox-checkbox {
  padding: 0;
  margin: 0;
  height: $widgetBoxHeight
}

.widget-boxes {
  gap: 0px;
  align-items: center;
  display: flex;
}

.widget-boxes-inner {
  border: 2px black solid;
  border-radius: 3px;
  margin: 0;
  padding: 0;
  height: $widgetBoxHeight;
  display: flex;
  max-width: 70%;
}

.widget-checkbox {
  width: $widgetBoxHeight;
  height: $widgetBoxHeight;
  appearance: none;
  background-color: base.$mainBgColor;
  border: 2px black solid;
  padding: 0;
  margin: 0;

  &--story {
    @extend .widget-checkbox;
    border-radius: 10000px;
  }

  &--push {
    @extend .widget-checkbox;
    border-radius: 3px;
  }
}

.widget-checkbox:checked {
  background-color: base.$offBlack;
}

.widget-checkbox:hover {
  background-color: base.$darkShadedBgColor;
}

div.widget-checkbox {
  padding: 0;
  margin: 0;
  height: $widgetBoxHeight
}

#add-talent-button {
  font-family: base.$titleFontStack;
  font-weight: bold;
  font-size: 18pt;
  border: 5px black solid;
  border-radius: 10px;
  background-color: base.$mainBgColor;
  margin: 10px;
}

#add-talent-button:hover {
  background-color: base.$darkShadedBgColor;
}

#modal {
  padding: 0;
  margin: 0;
  appearance: none;
  border: none;
  background-color: transparent;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

#modal::backdrop {
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-inner {
  width: min-content;
}

#talent-select-modal {
  max-width: 37.5%;
  min-width: 850px;
  background-color: base.$shadedBgColor;
  border-radius: 10px;
  height: 1000px;
  padding: 20px;
}

#talent-modal-search {
  border: none;
  border-bottom: 1px black solid;
  font-size: 16px;
  background: transparent;
  margin-bottom: 50px;
}

#talent-modal-scrolling-section {
  overflow-y: auto;
  height: 80%;
}

.modal-talent {
  text-align: left;
  appearance: none;
  background: transparent;
  border: none;
  font-family: base.$fontStack;
  font-size: 12pt;
}

.modal-talent:hover {
  background-color: base.$darkShadedBgColor;
}

.modal-talent-exists {
  text-decoration-line: line-through;
}

#class-title-talents {
  font-family: base.$titleFontStack;
  font-size: 24pt;
}

.talent-section-header {
  background-color: base.$darkShadedBgColor;
  font-size: 14pt;
  font-weight: bolder;
  padding: 2px 8px;
}

#class-change-selector {
  background-color: inherit;
  font: inherit;
  color: inherit;
  border: inherit;
  margin-left: auto;
  height: min-content;
  font-weight: bold;
  font-family: base.$titleFontStack;
  font-size: 14pt;
}

.wises-footer {
  margin-top: 10px;
}

.widget-dice-pool-entry {
  width: 30px;
  height: 30px;
  text-align: center;
  align-self: center;
  font-weight: bold;
  border-radius: 10px;
  border: 2px solid black;
  margin-top: 0px;
  display: block;
  font-size: 16pt;

  &--cleric {
    @extend .widget-dice-pool-entry;
    width: 60px;
    height: 60px;
    margin: -5px -10px auto 0;
    font-size: 24pt;
    z-index: 1;
  }
}

.widget-dice-pool-roll {
  background-color: transparent;
  font-weight: bolder;
  font-family: base.$fontStack;
  border: none;
  border-left: 1px black solid;
  margin-left: 5px;

  &--cleric {
    @extend .widget-dice-pool-roll;
    margin: 4px 16px;
  }
}

.widget {
  display: flex;
  flex-direction: column;
}

.widget-selectable {
  background-color: base.$mainBgColor;
  font-family: base.$fontStack;
  font-size: 12pt;
  width: 100%;
  border: none;
  border-radius: 5px;
}

.footer-input {
  width: 100%;
  border: none;
  margin: 10px;
  height: 18pt;
  border-radius: 5px;
  font-size: 12pt;
}

.footer-compositions {
  align-items: center;
}

.channel-divinity-input {
  width: 80%;
  border: none;
  height: 36pt;
  border-radius: 5px;
  font-size: 18pt;
  font-weight: bolder;
  font-style: italic;
  padding-left: 18px;
  margin: 0;
}

.channel-divinity-footer {
  margin-top: 20px;
}

.cleric-box {
  display: flex;
  gap: 0;
  align-items: start;
  align-content: start;
}

.tiny-crementer {
  align-content: center;
  margin: 0;
  padding: 0;
  margin-top: -18px;
}

.tiny-crementer>button {
  height: fit-content;
}

.tiny-crementer>p {
  height: fit-content;
  line-height: 0;
}

.talent-widget-text-input {
  height: $widgetBoxHeight;
  width: 70%;
  border: solid 2px black;
  border-radius: 3px;
  font-size: 12pt;
  margin: 0 0 4px 0;
}

.primordial-bonds-deep-box {
  margin-right: 5%;
}

.talent-footer-text-input {
  width: 80%;
  height: 24px;
  margin: 2px;
  border: none;
  border-radius: 5px;
  padding: 2px 16px;
  font-weight: bold;
  font-style: italic;
}

